--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">MavelApp</string>
+    <string name="app_name">Mavel App</string>
+
+    <string name="default_error_msg">Something is wrong, check your connection and try again!</string>
 </resources>
