--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Mavel App</string>
 
+    <string name="default_no_data_msg">No Data</string>
     <string name="default_error_msg">Something is wrong, check your connection and try again!</string>
 </resources>
